created main.css file and added it to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/general.css">
+    <link rel="stylesheet" href="css/main.css">
     <script src="js/script.js" defer></script>
     <title>Lista zadań</title>
 </head>
@@ -20,7 +21,6 @@
                 <button class="form__button js-addTaskButton">Dodaj Zadanie</button>
             </form>
             <ul class="list js-taskList main__subElement">
-
             </ul>
         </main>
     </div>
