--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/subHeaderr.css">
     <link rel="stylesheet" href="css/form.css">
     <script src="js/script.js" defer></script>
     <title>Lista zadań</title>
