form elements styled

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
                 <header class="subHeader">
                     <h2 class="subHeader__title">Dodaj nowe zadanie</h2>
                 </header>
-
-                <input type="text" class="form__input js-inputTask" placeholder="Co jest do zrobienia?" autofocus>
-                <button class="form__button js-addTaskButton">Dodaj Zadanie</button>
+                <div class="form__fields">
+                    <input type="text" class="form__input js-inputTask" placeholder="Co jest do zrobienia?" autofocus>
+                    <button class="form__button js-addTaskButton">Dodaj Zadanie</button>
+                </div>
             </form>
             <div class="taskContainer main__subElement">
                 <header class="subHeader">
