added list.css file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/subHeader.css">
     <link rel="stylesheet" href="css/form.css">
+    <link rel="stylesheet" href="css/list.css">
     <script src="js/script.js" defer></script>
     <title>Lista zadań</title>
 </head>
